--- a/P406162AE.opf/layers/v114/Pagination.yml
+++ b/P406162AE.opf/layers/v114/Pagination.yml
@@ -8,84 +8,98 @@ annotations:
     span:
       start: 0
       end: 751
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   3c055ca4e5b34a8f8deacc90e109286e:
     imgnum: 1283
     reference: ''
     span:
       start: 754
       end: 2187
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   2c952a3659444bb095582b6a49d0ad3c:
     imgnum: 1284
     reference: ''
     span:
       start: 2190
       end: 3547
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   2bcb1656994f4165b11fa56140c2ed19:
     imgnum: 1285
     reference: ''
     span:
       start: 3550
       end: 4928
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   8cc668a274c344f7b9664254250c9ccc:
     imgnum: 1286
     reference: ''
     span:
       start: 4931
       end: 6269
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   a3bf805a01954f2faac5501ff696f4ab:
     imgnum: 1287
     reference: ''
     span:
       start: 6272
       end: 7608
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   95b193077c264ccfacd2ba686db0b417:
     imgnum: 1288
     reference: ''
     span:
       start: 7611
       end: 8959
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   8022a0255cee41a08f39717e4d4b8fe2:
     imgnum: 1289
     reference: ''
     span:
       start: 8962
       end: 10348
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   79a7c3a132594a33b7e8652788d83256:
     imgnum: 1290
     reference: ''
     span:
       start: 10351
       end: 11709
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   a1ccc7dd98ef4799b1a7dcc66ded4c4d:
     imgnum: 1291
     reference: ''
     span:
       start: 11712
       end: 13100
+    note_ref: 6fcb1e6d30764e95b075a5c6b11fa53b
   c113876c598b43299c957a55a4f2a7ae:
     imgnum: 1292
     reference: ''
     span:
       start: 13103
       end: 14418
+    note_ref: d9dc4040ebae4c0789fc2ad549543c08
   110e5a1d1fe249c8a800cd67c3569c36:
     imgnum: 1293
     reference: ''
     span:
       start: 14421
       end: 15782
+    note_ref: d9dc4040ebae4c0789fc2ad549543c08
   3d770dbf22224749afb90c8e7b6ef03d:
     imgnum: 1294
     reference: ''
     span:
       start: 15785
       end: 17146
+    note_ref: d9dc4040ebae4c0789fc2ad549543c08
   0b4363c4b3654a0d817c9070d60d170e:
     imgnum: 1295
     reference: ''
     span:
       start: 17149
       end: 18125
+    note_ref: d9dc4040ebae4c0789fc2ad549543c08
   6fcb1e6d30764e95b075a5c6b11fa53b:
     imgnum: 1296
     reference: ''
