--- a/D0EB1B1FE.opf/index.yml
+++ b/D0EB1B1FE.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   1b5157d54e584fc38b29bccb805f7570:
     parts: {}
+    work_id: Q5814
     span:
-    - vol: 114
+    - base: '7407'
       start: 0
       end: 20281
-    work_id: Q5814
